Commited the loan and update Completly

--- a/DhatriHRM/WebContent/Welcome.html
+++ b/DhatriHRM/WebContent/Welcome.html
@@ -8,7 +8,7 @@
 <div align="center">
 <h1><font color="blue"> <marquee> DhatriInfo Solutions </marquee></font></h1>
 <a href="EmployDetails.html">Register Employee  </a> |
-<a href="UpdateEmp.jsp">Update Employee </a> |
+<a href="UpdateResp.jsp">Update Employee </a> |
 <a href="Loan.jsp"> Apply for Loan</a>  |
 <a href="Search.jsp">Search </a>  |
 <a href="Delete.jsp">Delete </a>
