Commited HRM Project with mail sending with otp

--- a/DhatriHRM/WebContent/Dhatri.html
+++ b/DhatriHRM/WebContent/Dhatri.html
@@ -7,17 +7,21 @@
 <body>
 <div align="center">
 <h1> <font color="#00008B"> DhatriInfo Solutions </font></h1>
-<form action="Welcome.html">
-  <div class="container">
-    <label><b>Username</b></label>
-    <input type="text" placeholder="Enter Username" name="uname" required>
+<div>
+<form action="LoginValidation" method="post">
+
+  <div class="container" align="center">
+ 
+    <label><b>E-Mail:</b></label>
+    <input type="email" placeholder="Enter Registered email" name="email" required>
     <label><b>Password</b></label>
-    <input type="password" placeholder="Enter Password" name="psw" required>
+    <input type="password" placeholder="Enter Password" name="pwd" required>
 
   <button type="submit">Login</button></a>
     <input type="checkbox" checked="checked"> Remember me
-    
-    
+   </div>
+   <h1></h1>
+   <a href="EmpRegistration.jsp">Registration</a>
 </form>
 </div>
 </body>
