--- a/DhatriHRM/WebContent/Registration.html
+++ b/DhatriHRM/WebContent/Registration.html
@@ -6,29 +6,64 @@
 </head>
 <body bgcolor="pink">
 
-<script type="text/javascript">
-function validation() {
-	var employeeId=document.getElementById("employeeId").value();
-	if(employeeId==""||employeeId==null)
-		{
-		document.getElementById("error").innerHTML="please enter id";
-		return false;
-		}else 
-			return true;
-}
+	<script type="text/javascript">
+		function validation() {
+			var employeeid = document.getElementById("employeeId").value;
 
-</script>
-<form action="dhatriHrm" method="post">
-<table align="center" cellspacing="0" cellpadding="8" borders="1" width="40%">
-<tr><td colspan="2" align="center"><h2>Enter Employee Details</h2></td></tr>
-<tr><td>Id:</td><td align="center"><input type="text" id="employeeId" name="employeeId" placeholder="Enter first name"></td></tr>
-<tr><td>Name:</td><td align="center"><input type="text" id="employeeName" name="employeeName" placeholder="Enter first name"></td></tr>
-<tr><td>Salary:</td><td align="center"><input type="text" id="employeeSalary" name="employeeSalary" placeholder="Enter salary"></td></tr>
-<tr><td>Location:</td><td align="center"><input type="text" id="Location" name="Location" placeholder="Enter location"></td></tr>
-<tr><td>Experiance:</td><td align="center"><input type="text" id="experiance" name="experiance" placeholder="Enter experiance"></td></tr>
-  <tr><td colspan="2" align="right">
-  <input type="submit" value="submit" onclick="return validation()"></td></tr>
-</table>
-</form>
+			if (employeeid == "" || employeeid == null) {
+				//alert("please enter employee Id");
+				document.getElementById("error").innerHTML = "please enter id";
+				return false;
+			} else
+				return true;
+
+		}
+
+		function clearField() {
+			document.getElementById("error").innerHTML = " ";
+		}
+	</script>
+	<form action="dhatriHrm" method="post">
+		<h1></h1>
+		<div align="center">
+			<a href="Welcome.html">HOME</a>
+		</div>
+		<table align="center" cellspacing="0" cellpadding="8" borders="1"
+			width="40%">
+			<tr>
+				<td colspan="2" align="center"><h2>Enter Employee Details</h2></td>
+			</tr>
+			<!-- <tr><td>Id:</td><td align="center"><input type="text" id="employeeId" name="employeeId" onkeypress="return clearField()" placeholder="Enter first name" ></td></tr> -->
+			<tr>
+				<td>Name:</td>
+				<td align="center"><input type="text" id="employeeName"
+					name="employeeName" placeholder="Enter first name"></td>
+			</tr>
+			<tr>
+				<td>Salary:</td>
+				<td align="center"><input type="text" id="employeeSalary"
+					name="employeeSalary" placeholder="Enter salary"></td>
+			</tr>
+			<tr>
+				<td>Location:</td>
+				<td align="center"><input type="text" id="Location"
+					name="Location" placeholder="Enter location"></td>
+			</tr>
+			<tr>
+				<td>E-Mail:</td>
+				<td align="center"><input type="text" id="email"
+					name="email" placeholder="Enter email"></td>
+			</tr>
+			<tr>
+				<td>Experiance:</td>
+				<td align="center"><input type="text" id="experiance"
+					name="experiance" placeholder="Enter experiance"></td>
+			</tr>
+			<tr>
+				<td colspan="2" align="right"><input type="submit"
+					value="submit" onclick="return validation()"></td>
+			</tr>
+		</table>
+	</form>
 </body>
 </html>
